Fixes to TD not showing up in streams

--- a/src/resources/stylesheets/components/_navbar.scss
+++ b/src/resources/stylesheets/components/_navbar.scss
@@ -195,7 +195,7 @@
 
     .nav-drop-col-1 
     {
-        width: 210px;
+        width: 240px;
     }
 
     .nav-drop-col-1.nav-dropdown-contents .category { flex-basis: 80%; }
